Fix and enable ash browser test

BrowserNonClientFrameViewAshTest.HeaderVisibilityInOverviewAndSplitview

This test was disabled due to flake (classic Ash), which I can't repro
now. But while it was disabled, it quit passing because some updates
to the test broke it, and because the home launcher now means that
tablet mode affects the visibility of caption buttons. This fixes the
test for all configurations including multi process Mash.

Bug: 818170
Change-Id: Ia0a029f52872b84f6ce6d37c1e433719c243eb56
Reviewed-on: https://chromium-review.googlesource.com/c/1327529
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609831}
Former-commit-id: 974e90b0c0e27f2358bdb661c6d2e41405715072